--- a/mrover/_sass/_layout.scss
+++ b/mrover/_sass/_layout.scss
@@ -131,7 +131,7 @@
 .tspos {
     text-align:center;
     margin:auto; //center
-    width: 800px; //change back to 100% if you want 4 sponsors per row
+    max-width: 800px; //change back to 100% if you want 4 sponsors per row
 }
 
 .tspo-container {
